# felicity

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Dioxus.toml  README.md  flake.nix  justfile
.sqlx/: query-ba3cc8703f0d9d2d57ab506d43157d08524c9bded6bbfb888024a13423b3ece0.json
assets/: tailwind.css
src/: main.rs  mood.rs  nudge.rs  state.rs
