[package]
name = "felicity"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
dioxus = { git = "https://github.com/DioxusLabs/dioxus.git", rev = "e41278af4539f3a46ac8bd9cd9940ef0b56cfeec" }
dioxus-desktop = { git = "https://github.com/DioxusLabs/dioxus.git", rev = "e41278af4539f3a46ac8bd9cd9940ef0b56cfeec" }
dioxus-router = { git = "https://github.com/DioxusLabs/dioxus.git", rev = "e41278af4539f3a46ac8bd9cd9940ef0b56cfeec" }
dioxus-signals = { git = "https://github.com/DioxusLabs/dioxus.git", rev = "e41278af4539f3a46ac8bd9cd9940ef0b56cfeec" }
dioxus-std = { version = "0.4.0", features = ["clipboard", "utils"] }
dirs = "5.0.1"
rodio = "0.17.3"
sqlx = { version = "0.7.2", features = ["sqlite", "runtime-tokio", "chrono"] }
tokio = "1.32.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
